--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.2"
+    "react-scripts": "2.1.2",
+    "@material-ui/core": "^1.3.1",
+    "@material-ui/icons": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
